# pyro-postgres

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  build.rs  clippy.toml  deny.toml  justfile  pyproject.toml  release-please-config.json  release-plz.toml  shell.nix
.github/workflows/: book.yml  cargo-deny.yml  ci.yml  format.yml  lints.yml  publish.yml  release.yml  security.yml  test.yml
benches/: bench.py  bench.rs
benchmark/: README.md  summary.html
book/: book.toml
book/src/: SUMMARY.md  api.md  conn.md  intro.md  log.md  pipelining.md  query.md  tx.md
pyro_postgres/: __init__.pyi  async_.pyi  sync.pyi
src/: error.rs  from_wire_value.rs  isolation_level.rs  lib.rs  opts.rs  params.rs  py_imports.rs  statement.rs  ticket.rs  tokio_thread.rs  util.rs  value.rs  zero_params_adapter.rs
src/async/: conn.rs  handler.rs  mod.rs  named_portal.rs  pipeline.rs  transaction.rs  unnamed_portal.rs
src/sync/: conn.rs  handler.rs  named_portal.rs  pipeline.rs  transaction.rs  unnamed_portal.rs
tests/: conftest.py  test_connection.py  test_extended_query.py  test_simple_query.py
tests/async_/: __init__.py  test_connection.py  test_data_types.py  test_exec.py  test_exec_batch.py  test_exec_drop.py  test_exec_first.py  test_exec_iter.py  test_exec_portal.py  test_extended_query.py  test_pipeline.py  test_query.py  test_query_drop.py  test_query_first.py  test_simple_query.py  test_transaction.py
tests/sync/: __init__.py  test_connection.py  test_data_types.py  test_exec.py  test_exec_batch.py  test_exec_drop.py  test_exec_first.py  test_exec_iter.py  test_exec_portal.py  test_extended_query.py  test_pipeline.py  test_query.py  test_query_drop.py  test_query_first.py  test_simple_query.py  test_transaction.py
