[package]
name = "pyro_postgres"
version = "0.3.2"
edition = "2024"
publish = false

[lib]
name = "pyro_postgres"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", features = [
  "auto-initialize",
  "abi3-py310",
  "experimental-async",
  "experimental-inspect",
  "either",
] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
pyo3-log = "0.13"
log = { version = "0.4", features = ["release_max_level_info"] }
tokio = { version = "1", features = ["rt", "net", "io-util", "sync"] }
zero-postgres = { version = "0.9", features = ["tokio", "sync", "lowlevel"] }
time = { version = "0.3", features = ["macros"] }
parking_lot = "0.12"
thiserror = "2"
either = "1"
ryu = "1"
criterion = "0.5"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[profile.release]
lto = true

[profile.bench]
lto = true

[lints.clippy]
all = { level = "deny", priority = -1 }
alloc_instead_of_core = "warn"
allow_attributes = "warn"
as_pointer_underscore = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
cfg_not_test = "warn"
clone_on_ref_ptr = "warn"
cognitive_complexity = "warn"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_union_representation = "warn"
disallowed_script_idents = "warn"
doc_include_without_cfg = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
infinite_loop = "warn"
inline_asm_x86_att_syntax = "warn"
inline_asm_x86_intel_syntax = "warn"
iter_over_hash_type = "warn"
large_include_file = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget = "warn"
missing_asserts_for_indexing = "warn"
mixed_read_write_in_expression = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_raw_strings = "warn"
non_ascii_literal = "warn"
non_zero_suggestions = "warn"
panic = "warn"
panic_in_result_fn = "warn"
pathbuf_init_then_push = "warn"
precedence_bits = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
shadow_same = "warn"
shadow_unrelated = "warn"
string_add = "warn"
string_lit_chars_any = "warn"
suspicious_xor_used_as_pow = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unreachable = "warn"
unused_result_ok = "warn"
verbose_file_reads = "warn"

[[bench]]
name = "bench"
harness = false
